app/less/classes/annotation.less
.side-annotation {
    .annotation {
        &.popup-wrapper {
            position: absolute;
            top: 0;
            right: 0;

            margin-top: 20px;
            margin-right: 15px;
        }
    }
}
.is-mobile {
    .side-annotation {
        .annotation {
            &.popup-wrapper {
                top: auto;
                bottom: 0;
                margin-top: auto;

                // Wider margin bottom to make room for lyrics at bottom.
                margin-bottom: 25px;
            }
        }

        &.heightless-lyric {
            .annotation {
                &.popup-wrapper {
                    // Even wider margin bottom if no lyrics at bottom.
                    margin-bottom: @app-large-icon-diameter;
                }
            }
        }
    }
}

.selected-annotation {

    /**
     * Not using mixin here so that text shadow applies only to annotation
     * title and not to annotation card.
     */
    .annotation-section {
        @colour: @odd-verse-colour;
        background-color: @colour;

        .annotation-title-block {
            .text-anchor-block {
                text-shadow:
                -@text-shadow-offset -@text-shadow-offset @text-shadow-blur @colour,
                @text-shadow-offset -@text-shadow-offset @text-shadow-blur @colour,
                -@text-shadow-offset @text-shadow-offset @text-shadow-blur @colour,
                @text-shadow-offset @text-shadow-offset @text-shadow-blur @colour;
            }
        }
    }
}

.carousel {
    .annotation-title-block {
        text-align: center;

        transition: max-height @animation-default, padding @animation-default;
        overflow: hidden;
        max-height: 0;

        // FIXME: Make text shadow transparent?
        // .text-shadow-mixin(transparent);
    }
}

.popup-content-wrapper {
    .annotation-title-block {
        padding: @annotation-section-padding 0;
    }
}

.annotation-title {
    text-align: center;
}

.annotation-card {
    position: relative;

    min-width: @annotation-card-width;

    max-height: 0;
    padding: 0 @annotation-card-padding;
    opacity: 0.5;
    overflow: hidden;

    // FIXME: Height transition is still janky.
    transition: opacity @animation-default,
                margin @animation-default,
                padding @animation-default,
                max-height @animation-default,
                box-shadow @animation-default;

    .text-shadow-mixin(@annotation-card-colour);

    // TODO: Portals block needs its own text shadow?
    .text-span {
    }

    // Select for annotation card dots, not portal dots.
    > .dots-block {
        position: absolute;
        height: @annotation-dot-diameter;
    }
}

// Override if in carousel and hidden by single lyric column.
.live-app.just-show-right-lyric .carousel-annotation.in-column-left,
.live-app.just-show-left-lyric .carousel-annotation.in-column-right {

    .annotation-card {
        min-height: auto;
        max-height: 0;
        margin: auto;
        padding: 0 @annotation-card-padding;
        opacity: 0.5;
        box-shadow: none;
    }
}

